tdf#163598 editeng: avoid using fake outline depth

Most implementations do not actually
do anything meaningful with Get/SetDepth,
so don't exception or accept their values.

To fix the bug, I could have just checked for
dynamic_cast<SvxEditEngineForwarder*>
(since it supports EE_PARA_OUTLLEVEL directly)
but this way seemed more encompassing.

The potential downside is that EE_PARA_OUTLLEVEL
will be requested as a real property
after GetPropertyValueHelper
with some of these dummy providers,
and who knows what UNO might do about that...

IF this patch causes problems,
then I need to implement Get/SetDepth
in SvxEditEngineForwarder
(or consider the dummy providers as SupportsOutlineDepth).

Change-Id: I74bf5e39a13bb1d588c39634347eb0982bda66b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176981
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 0d3748e5fbfb2ac8dd60d491d566075938927237)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180023
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>