editeng/source/uno/unotext.cxx
@@ -529,6 +529,9 @@ bool SvxUnoTextRangeBase::SetPropertyValueHelper( const SfxItemPropertyMapEntry*
             SvxTextForwarder* pForwarder = pEditSource? pEditSource->GetTextForwarder() : nullptr;
             if(pForwarder && pSelection)
             {
+                if (!pForwarder->SupportsOutlineDepth())
+                    return false;
+
                 sal_Int16 nLevel = sal_Int16();
                 if( aValue >>= nLevel )
                 {
@@ -714,7 +717,10 @@ bool SvxUnoTextRangeBase::GetPropertyValueHelper(  SfxItemSet const & rSet, cons
             SvxTextForwarder* pForwarder = pEditSource? pEditSource->GetTextForwarder() : nullptr;
             if(pForwarder && pSelection)
             {
-                sal_Int16 nLevel = pForwarder->GetDepth(pSelection->start.nPara);
+                if (!pForwarder->SupportsOutlineDepth())
+                    return false;
+
+                sal_Int16 nLevel = pForwarder->GetDepth( pSelection->start.nPara );
                 if( nLevel >= 0 )
                     aAny <<= nLevel;
             }
@@ -2485,6 +2491,11 @@ sal_Int32 SvxDummyTextSource::GetLineNumberAtIndex( sal_Int32 /*nPara*/, sal_Int
 }
 
 bool SvxDummyTextSource::QuickFormatDoc( bool )
+{
+    return false;
+}
+
+bool SvxDummyTextSource::SupportsOutlineDepth() const
 {
     return false;
 }
